feat: expanding angular course

--- a/Angular/01-bases/src/app/app.component.html
+++ b/Angular/01-bases/src/app/app.component.html
@@ -2,3 +2,5 @@
 <!-- <app-contador></app-contador>
 <app-contador></app-contador>
 <app-contador></app-contador> Se pueden poner todos los que queremos son independites--> 
+
+<app-heroe></app-heroe>
