--- a/Angular/01-bases/src/app/app.component.html
+++ b/Angular/01-bases/src/app/app.component.html
@@ -3,4 +3,5 @@
 <app-contador></app-contador>
 <app-contador></app-contador> Se pueden poner todos los que queremos son independites--> 
 
-<app-heroe></app-heroe>
+<!-- <app-heroe></app-heroe> -->
+<app-listado></app-listado>
